# mysql-plugin-is-locks

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  depcomp  is_locks.cc  ltmain.sh  missing
config/: ac_mysql.m4
src/: Makefile.am  Makefile.in  is_locks.cc  is_locks_config.h.in
