dnl For is_test plugin
AC_INIT(is_locks, 1.0)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
AC_DISABLE_STATIC
AC_PROG_CC
AC_PROG_LIBTOOL

sinclude(config/ac_mysql.m4)
MYSQL_CONFIG_TEST
AC_SUBST(MYSQL_INCLUDES)
AC_SUBST(MYSQL_PLUGINDIR)
MYSQL_SRC_TEST
AC_SUBST(MYSQL_SRC_INCLUDES)

AC_C_CONST
AC_TYPE_SIZE_T
dnl AC_CHECK_HEADERS(limits.h syslimits.h)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

