# Used to build Makefile.in

INCLUDES =   $(MYSQL_INC)
noinst_HEADERS = 
lib_LTLIBRARIES = is_locks.la
is_locks_la_SOURCES = is_locks.cc
is_locks_la_LIBADD =
is_locks_la_LDFLAGS =  -module
is_locks_la_CFLAGS = $(AM_CFLAGS) -DMYSQL_DYNAMIC_PLUGIN
is_locks_la_CXXFLAGS = $(AM_CFLAGS) -DMYSQL_DYNAMIC_PLUGIN

